# doorbell-bot

./: .gitignore  README.md
firmware_esp32s3zero/: CMakeLists.txt  sdkconfig.defaults
firmware_esp32s3zero/main/: CMakeLists.txt  Kconfig.projbuild  config_manager.c  config_manager.h  doorbell_logic.c  doorbell_logic.h  led_status.c  led_status.h  main.c  telegram_bot.c  telegram_bot.h  web_server.c  web_server.h
